// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto 
syntax="proto3";

option go_package = "./;user";

package user;

import "google/protobuf/timestamp.proto";

service User {
    rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {}
    rpc GetByIDWithSubsInfo(GetByIDWithSubsInfoRequest) returns (GetByIDWithSubsInfoResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetByIDRequest {
    uint64 user_id = 1;
}

message GetByIDResponse {
    UserResponse user = 1;
}


message UserResponse {
    uint64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string avatar = 5;
    google.protobuf.Timestamp date_of_birth = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message GetByIDWithSubsInfoRequest {
    uint64 user_id = 1;
    uint64 authorized_user_id = 2;
}

message GetByIDWithSubsInfoResponse {
    UserResponse user = 1;
    bool is_subscribed = 2;
    bool is_subscriber = 3;
}

message CreateRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string avatar = 4;
    string password = 5;
    string repeat_password = 6;
    google.protobuf.Timestamp date_of_birth = 7;
}

message CreateResponse {
    UserResponse user = 1;
}

message UpdateRequest {
    uint64 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string avatar = 5;
    string password = 6;
    string repeat_password = 7;
    google.protobuf.Timestamp date_of_birth = 8;
}

message UpdateResponse {
    UserResponse user = 1;
}

message DeleteRequest {
    uint64 user_id = 1;
}

message DeleteResponse {
}
